[package]
name = "indexeddb-cryptostore"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[dependencies]
async-trait = "0.1.40"
matrix-sdk-crypto = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
indexeddb = { git = "https://github.com/poljar/indexeddb-rs" }

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
